# Modern-Python-Package

./: .pre-commit-config  LICENSE.txt  Makefile  README.md  modern-python-package.py  pyproject.toml
.github/workflows/: github-actions-test.yaml
Package/: package.py
docker/: Dockerfile
template/: README.md  pyproject.toml
template/src/template/: __about__.py  __init__.py
