[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
directory = "docker"

[project]
name = "template"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "???", email = "" }]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = ["click"]

[tool.hatch.version]
path = "src/template/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "black>=23.11.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
  "pre-commit",
  "types-requests",
  "towncrier",
]

[tool.hatch.envs.default.scripts]
cov = ["test-cov", "cov-report"]
test = "pytest -vv tests/test_*"
test-cov = ["coverage run -m pytest tests/*"]
cov-report = ["- coverage combine", "coverage report --fail-under=80"]
typing = "mypy --install-types --non-interactive src/ptolemy/**.py"
style = ["ruff src/ptolemy", "black --check --diff src/ptolemy"]
fmt = ["black src/ptolemy/**.py", "ruff --fix src/ptolemy", "style"]
all = ["test", "style", "typing"]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.black]
target-version = ["py310", "py311"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = ["py310", "py311"]
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["template"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["template", "tests"]
branch = true
parallel = true
omit = ["src/template/__about__.py"]

[tool.coverage.paths]
template = ["src/template", "*/template/src/template"]
tests = ["tests", "src/template/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

# [project.scripts]
# template = "template:template_cli"

[tool.pytest.ini_options]
pythonpath = "src/"

[tool.towncrier]
package = "template"
package_dir = "src/template"
filename = "Changelog.md"
